--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,8 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		%sveltekit.head%
+
+		<script defer src="https://umami-wispy-dream-8048.fly.dev/script.js" data-website-id="470defed-e50b-42be-8c70-a0064d615236"></script>
 	</head>
 	<body
 		data-sveltekit-preload-data="hover"
